# practise

./: .gitignore  .gitpod.yml  Makefile  README.md  jbuild
code_practise/: README.md  compile.sh
code_practise/leetcode/: 00002.cpp  00037.cpp  00146.cpp  00308.cpp  00416.cpp  00503.cpp  00572.cpp  00759.cpp  00772.cpp  01235.cpp  1008.cpp  105.cpp  1057.cpp  1096.cpp  1202.cpp  1262.cpp  127.cpp  1316.cpp  1320.cpp  138.cpp  139.cpp  148.cpp  158.cpp  166.cpp  188.cpp  199.cpp  207.cpp  208.cpp  209.cpp  215.cpp  22.cpp  224.cpp  227.cpp  23.cpp  239.cpp  241.cpp  25.cpp  253.cpp  270-2.cpp  270.cpp  (+111 more)
codewars/: cw.ml  jbuild
coq/: README.txt  examples_set1.v  examples_set2.v  my_first_proof.v
cpp_lab/: .gitignore  CMakeLists.txt  README.md  Vagrantfile
cpp_lab/include/: Tricks.hpp  concurrency.h  msem.h  policy.hpp  sptr.h  stack4.hpp  stack5dc1.hpp  stack6dec1.hpp  stack7dec1.hpp  typelist.hpp
cpp_lab/src/: concurrency.cpp  main.cpp  msem.cpp  sptr.cpp
cracking_code_interview/8/: out
cracking_code_interview/9/: out
hackerrank/Flowers/: out
hackerrank/Jim_and_the_Orders/: out
hackerrank/algorithmic_crush/: out
hackerrank/bfs/: out
hackerrank/brick_game/: out
hackerrank/coin_on_table/: out
hackerrank/colorful_candies/: out
hackerrank/connected_regions/: out
leetcode/: 425.cpp  656.cpp  68.cpp  lc.ml
real_street_ocaml/: Makefile  README.md  README.txt  bst.ml  find_kth_from_two_sorted_array.ml  jbuild  monad_examples.ml  printer.ml  printer.mli  priority_queue.ml  quicksort.ml  rec03.ml  sum.ml
tla/: .gitignore  README.md
(+388 files in other folders)
